mdapipkg/unpackaged/objects/Travel_Document__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that is the parent of this travel document.</description>
        <label>AccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Travel Documents</relationshipLabel>
        <relationshipName>Travel_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtDocument__c</fullName>
        <description>External Id :Travel document / Passport number</description>
        <externalId>true</externalId>
        <label>Ext Document</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <description>Nationality of the passenger</description>
        <label>Nationality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABW (Aruban)</fullName>
                </value>
                <value>
                    <fullName>AFG (Afghan)</fullName>
                </value>
                <value>
                    <fullName>AGO (Angolan)</fullName>
                </value>
                <value>
                    <fullName>AIA (Anguillan)</fullName>
                </value>
                <value>
                    <fullName>ALB (Albanian)</fullName>
                </value>
                <value>
                    <fullName>AND (Andorran)</fullName>
                </value>
                <value>
                    <fullName>ARE (Emirati)</fullName>
                </value>
                <value>
                    <fullName>ARG (Argentine)</fullName>
                </value>
                <value>
                    <fullName>ARM (Armenian)</fullName>
                </value>
                <value>
                    <fullName>ASM (American Samoan)</fullName>
                </value>
                <value>
                    <fullName>ATG (Antiguans)</fullName>
                </value>
                <value>
                    <fullName>AUS (Australian)</fullName>
                </value>
                <value>
                    <fullName>AUT (Austrian)</fullName>
                </value>
                <value>
                    <fullName>AZE (Azerbaijani)</fullName>
                </value>
                <value>
                    <fullName>BDI (Burundian)</fullName>
                </value>
                <value>
                    <fullName>BEL (Belgian)</fullName>
                </value>
                <value>
                    <fullName>BEN (Beninese)</fullName>
                </value>
                <value>
                    <fullName>BFA (Burkinabe)</fullName>
                </value>
                <value>
                    <fullName>BGD (Bangladeshi)</fullName>
                </value>
                <value>
                    <fullName>BGR (Bulgarian)</fullName>
                </value>
                <value>
                    <fullName>BHR (Bahraini)</fullName>
                </value>
                <value>
                    <fullName>BHS (Bahamian)</fullName>
                </value>
                <value>
                    <fullName>BIH (Bosnian)</fullName>
                </value>
                <value>
                    <fullName>BLR (Belarusian)</fullName>
                </value>
                <value>
                    <fullName>BLZ (Belizean)</fullName>
                </value>
                <value>
                    <fullName>BMU (Bermudian)</fullName>
                </value>
                <value>
                    <fullName>BOL (Bolivian)</fullName>
                </value>
                <value>
                    <fullName>BRA (Brazilian)</fullName>
                </value>
                <value>
                    <fullName>BRB (Barbadian)</fullName>
                </value>
                <value>
                    <fullName>BRN (Bruneian)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Document_Expiry_Date__c</fullName>
        <label>Travel Document Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Travel_Document_Number__c</fullName>
        <label>Travel Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Travel Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TD-{0000000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Documents</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>